<resources>
    <string name="app_name">Food Planning App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_with_google_str">Continue With Google</string>
    <string name="continue_with_mail_str">continue With Mail</string>
    <string name="Title_start" />
    <string name="Title_string">Meal Mate</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="continue_with_mail">Continue With Mail</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login"><u>    Login  </u></string>
    <string name="categories">Categories</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="countries">Countries</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="video">Video</string>
    <string name="loginn">Login</string>
    <string name="categoriess">Categories</string>
    <string name="ingredientss">Ingredients</string>
    <string name="your_favourite_meals">Your Favourite Meals</string>
    <string name="your_week_plan">Your Week Plan</string>
    <string name="default_web_client_id">313698502727-4e3bnv7vl5ct14r367fjarmdmd52pk7d.apps.googleusercontent.com</string>
</resources>