<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/start_page_back"
    tools:context=".ui.start.StartFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:layout_marginTop="30dp"
        android:rotation="0"
        android:rotationY="0"
        android:text="@string/Title_string"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="70sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mailbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/btn_sqrbackground"
        android:text="@string/continue_with_mail"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/gbtn"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/btn_sqrbackground"
        android:drawableStart="@drawable/google"
        android:text="@string/continue_with_google_str"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guestbtn"
        app:layout_constraintEnd_toEndOf="@id/mailbtn"
        app:layout_constraintStart_toStartOf="@id/mailbtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/guestbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:background="@drawable/btn_sqrbackground"
        android:text="@string/continue_as_guest"
        android:textSize="20sp"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/mailbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/mailbtn" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/logooooo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>