<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupFragment">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernametxtfieldlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/username_icon"
        app:startIconTint="@color/orange"
       >

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/usernametxtfield"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:paddingStart="60dp"
        android:background="@drawable/rectangleee"
         />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emaitxtfieldlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/usernametxtfieldlayout"
        app:layout_constraintStart_toStartOf="@id/usernametxtfieldlayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/mail_icon"
        app:startIconTint="@color/orange"
        >


    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/emaitxtfield"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangleee"
        android:paddingStart="60sp"
        android:hint="@string/email"
         />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passtxtfieldlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emaitxtfieldlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/pass_icon"
        app:passwordToggleEnabled="true"
        app:startIconTint="@color/orange"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        >



    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/passtxtfield"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="564dp"
        android:background="@drawable/rectangleee"
        android:paddingStart="60dp"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emaitxtfield" />

    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmpasstxtfieldlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passtxtfieldlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/pass_icon"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="16dp"
        app:startIconTint="@color/orange"
        >



    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/confirmpasstxtfield"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="612dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="60dp"
        android:background="@drawable/rectangleee"
        android:hint="@string/confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passtxtfield" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmpasstxtfieldlayout"
        android:backgroundTint="#E65425"
        app:layout_constraintTop_toBottomOf="@id/confirmpasstxtfieldlayout"
        android:layout_marginTop="32dp"
        android:text="Sign up"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="649dp" />
    <TextView
        android:layout_width="match_parent"
       android:id="@+id/already"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
       app:layout_constraintTop_toBottomOf="@id/signupbtn"
        app:layout_constraintStart_toStartOf="@id/signupbtn"
        />

    <TextView
        android:id="@+id/logintxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/signupbtn"
        app:layout_constraintTop_toBottomOf="@id/signupbtn" />


</androidx.constraintlayout.widget.ConstraintLayout>