<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emaitxtfieldlayoutlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/mail_icon"
        app:startIconTint="@color/orange"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/emaitxtfield"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangleee"
            android:paddingStart="60sp"
            android:hint="@string/email"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passtxtfieldlayoutlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emaitxtfieldlayoutlogin"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/pass_icon"
        app:passwordToggleEnabled="true"
        app:startIconTint="@color/orange"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/passtxtfield"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="564dp"
            android:background="@drawable/rectangleee"
            android:paddingStart="60dp"
            android:hint="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emaitxtfield" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passtxtfieldlayoutlogin"
        android:backgroundTint="#E65425"
        app:layout_constraintTop_toBottomOf="@id/passtxtfieldlayoutlogin"
        android:layout_marginTop="64dp"
        android:text="@string/loginn"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="649dp" />



</androidx.constraintlayout.widget.ConstraintLayout>