<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.view.HomeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardsearch"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="50dp"
        >
        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_inspiration"
        android:id="@+id/txttittle"
        app:layout_constraintTop_toBottomOf="@+id/cardsearch"
        app:layout_constraintStart_toStartOf="@+id/cardsearch"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:layout_marginTop="20dp"


        />


    <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
        android:id="@+id/homerecyle"
        app:layout_constraintTop_toBottomOf="@+id/txttittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_meal"
        android:background="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:id="@+id/cattxt"
        app:layout_constraintTop_toBottomOf="@+id/homerecyle"
        app:layout_constraintStart_toStartOf="@+id/cardsearch"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="20dp"


        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:id="@+id/categoryrecyle"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       app:layout_constraintTop_toBottomOf="@+id/cattxt"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/homerecyle"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/category_card"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countries"
        android:id="@+id/flagtxt"
        app:layout_constraintTop_toBottomOf="@+id/categoryrecyle"
        app:layout_constraintStart_toStartOf="@+id/cattxt"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="20dp"


        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:id="@+id/flagrecycle"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/flagtxt"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/categoryrecyle"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/category_card"
        />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>