<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.details.view.DetailsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/mealimg"
            android:src="@drawable/backgrounddd"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="40dp"
            android:id="@+id/favbtn"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/orange"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:id="@+id/favouriteicon"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_favorite_border_24"
                android:padding="10dp"

                />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="40dp"
            android:id="@+id/planbtn"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/orange"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:id="@+id/planimage"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_calendar_month_24"
                android:padding="10dp"

                />

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:id="@+id/infocard"
            app:layout_constraintTop_toBottomOf="@+id/mealimg"
            android:layout_margin="16dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:id="@+id/mealtittle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAlignment="center"
                    android:text="Egyptain traditional koshary plate plate "
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="16dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/mealtittle"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:id="@+id/catgitem"
                        android:layout_height="wrap_content"
                        android:background="@drawable/baseline_category_24"
                        android:backgroundTint="@color/orange"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cattittle"
                        android:text="Dessert"
                        android:layout_marginStart="8dp"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        />
                    <ImageView
                        android:layout_width="24dp"
                        android:id="@+id/flagitem"
                        android:layout_marginStart="16dp"
                        android:layout_height="24dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/countryname"
                        android:layout_marginStart="8dp"
                        android:text="American"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ingrtxt"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:textSize="24dp"
            android:text="@string/ingredients"
            app:layout_constraintTop_toBottomOf="@+id/infocard"
            app:layout_constraintStart_toStartOf="@id/planbtn"
            android:layout_marginTop="16dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/ingrrecycle"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ingrtxt"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="16dp"
            tools:listitem="@layout/ingrident_card"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stepstxt"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:textSize="24dp"
            android:text="@string/steps"
            app:layout_constraintTop_toBottomOf="@+id/ingrrecycle"
            app:layout_constraintStart_toStartOf="@id/planbtn"
            android:layout_marginTop="16dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/steps"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="hsfjksfbkjsafkjsfskjfskjfbskjfbskjfbskjldbsjkdfbsdjk  skj kjghskjl bsgkl jbskj lbkjg bkj bekjlbgkjgb klb kljb kj bj bjkb jb jkb kjsb jk"
            app:layout_constraintTop_toBottomOf="@+id/stepstxt"
            app:layout_constraintStart_toStartOf="@id/planbtn"
            app:layout_constraintEnd_toEndOf="@+id/favbtn"
            android:layout_marginTop="16dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/youtubestxt"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:textSize="24dp"
            android:text="@string/video"
            app:layout_constraintTop_toBottomOf="@+id/steps"
            app:layout_constraintStart_toStartOf="@id/planbtn"
            android:layout_marginTop="16dp"
            />
        <WebView
            android:layout_width="0dp"
            android:layout_height="250dp"
            app:layout_constraintTop_toBottomOf="@+id/youtubestxt"
            android:id="@+id/webview"
            app:layout_constraintStart_toStartOf="@id/planbtn"
            app:layout_constraintEnd_toEndOf="@+id/favbtn"
            android:layout_marginTop="16dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/webview"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>